Add section shortcode, to render children

--- a/assets/_markdown.scss
+++ b/assets/_markdown.scss
@@ -137,7 +137,8 @@
     }
 
     dd {
-      margin-inline-start: $padding-16 * 2;
+      margin-inline-start: $padding-16;
+      margin-bottom: $padding-16;
     }
   }
 
