remove shortcodes, add css

--- a/assets/_utils.scss
+++ b/assets/_utils.scss
@@ -42,6 +42,14 @@
   text-align: center;
 }
 
+.text-left {
+  text-align: left;
+}
+
+.text-right {
+  text-align: right;
+}
+
 .hidden {
   display: none;
 }
