--- a/layouts/partials/docs/footer.html
+++ b/layouts/partials/docs/footer.html
@@ -4,23 +4,25 @@
 {{ end }}
 
 {{ if and .GitInfo .Site.Params.BookRepo }}
+  {{- $date := partial "docs/date" (dict "Date" .GitInfo.AuthorDate.Local "Format" .Site.Params.BookDateFormat) -}}
+  {{- $commitURL := printf "%s/commit/%s" .Site.Params.BookRepo .GitInfo.Hash }}
   <div>
-    {{- $date := partial "docs/date" (dict "Date" .GitInfo.AuthorDate.Local "Format" .Site.Params.BookDateFormat) -}}
-    <a class="flex align-center" href="{{ .Site.Params.BookRepo }}/commit/{{ .GitInfo.Hash }}" title='{{ i18n "Last modified by" }} {{ .GitInfo.AuthorName }} | {{ $date }}' target="_blank" rel="noopener">
-      <img src="{{ "svg/calendar.svg" | relURL }}" class="book-icon" alt="Calendar" />
+    <a href="{{ $commitURL }}" class="flex align-center book-icon" title='{{ i18n "Last modified by" }} {{ .GitInfo.AuthorName }} | {{ $date }}' target="_blank" rel="noopener">
+      <img src="{{ "svg/calendar.svg" | relURL }}" alt="Calendar" />
       <span>{{ $date }}</span>
     </a>
   </div>
 {{ end }}
 
 {{ if and .File .Site.Params.BookRepo .Site.Params.BookEditPath }}
+  {{- $editURL := printf "%s/%s/%s/%s" .Site.Params.BookRepo .Site.Params.BookEditPath .Site.Params.contentDir (replace .File.Path "\\" "/") -}}
   <div>
-    <a class="flex align-center" href="{{ .Site.Params.BookRepo }}/{{ .Site.Params.BookEditPath }}/{{ .Site.Params.contentDir }}/{{ replace .File.Path "\\" "/" }}" target="_blank" rel="noopener">
-      <img src="{{ "svg/edit.svg" | relURL }}" class="book-icon" alt="Edit" />
+    <a href="{{ $editURL }}" class="flex align-center book-icon" target="_blank" rel="noopener">
+      <img src="{{ "svg/edit.svg" | relURL }}" alt="Edit" />
       <span>{{ i18n "Edit this page" }}</span>
     </a>
   </div>
 {{ end }}
+</div>
 
 {{ partial "docs/prev-next" . }}
-</div>
