--- a/layouts/partials/docs/languages.html
+++ b/layouts/partials/docs/languages.html
@@ -9,18 +9,18 @@
 
 <div class="book-languages" tabindex="0" aria-haspopup="true">
   <ul>
-    <li class="flex align-center">
-      <img src="{{ "svg/translate.svg" | relURL }}" class="book-icon" alt="Languages" />
-      {{ $.Site.Language.LanguageName }}
-    </li> 
+    <li class="flex align-center book-icon">
+      <img src="{{ "svg/translate.svg" | relURL }}" alt="Languages" />
+      <span>{{ $.Site.Language.LanguageName }}</span>
+    </li>
   </ul>
 
   <ul class="book-languages-list">
     {{ range .Site.Languages }}{{ with index $translations .Lang }}
     <li class="{{ if (eq $.Site.Language .Language) }}active{{ end }}">
-      <a href="{{ .Permalink }}" class="flex align-center">
-        <img src="{{ "svg/translate.svg" | relURL }}" class="book-icon" alt="Languages" />
-        {{ .Language.LanguageName }}
+      <a href="{{ .Permalink }}" class="flex align-center book-icon">
+        <img src="{{ "svg/translate.svg" | relURL }}" alt="Languages" />
+        <span>{{ .Language.LanguageName }}</span>
       </a>
     </li>
     {{ end }}{{ end }}
