--- a/assets/_markdown.scss
+++ b/assets/_markdown.scss
@@ -170,6 +170,13 @@
       margin-bottom: 0;
     }
   }
+
+  figure {
+    margin: $padding-16 0;
+    figcaption p {
+      margin-top: 0;
+    }
+  }
 }
 
 .markdown-inner {
