#236, #171 Add section to search results

--- a/assets/_main.scss
+++ b/assets/_main.scss
@@ -194,6 +194,12 @@ ul.pagination {
 
     @include spin(1s);
   }
+
+  #book-search-results {
+    small {
+      opacity: .5;
+    }
+  }
 }
 
 .book-toc {
