--- a/assets/_utils.scss
+++ b/assets/_utils.scss
@@ -54,6 +54,14 @@
   display: none;
 }
 
+input.toggle {
+  height: 0;
+  width: 0;
+  overflow: hidden;
+  opacity: 0;
+  position: absolute;
+}
+
 .clearfix::after {
   content: "";
   display: table;
@@ -75,4 +83,10 @@
   bottom: 0;
   overflow-x: hidden;
   overflow-y: auto;
+}
+
+@mixin outline {
+  outline-style: auto;
+  outline-color: currentColor;
+  outline-color: -webkit-focus-ring-color;
 }
