Simplest the fix
Signed-off-by: Alex Ivanov <ai@contributor.pw>

--- a/layouts/partials/docs/languages.html
+++ b/layouts/partials/docs/languages.html
@@ -1,4 +1,3 @@
-{{ $currentpage := .Permalink }}
 <!-- Merge home and current page translations -->
 {{ $translations := dict }}
 {{ range .Site.Home.AllTranslations }}
@@ -19,7 +18,7 @@
   <ul class="book-languages-list">
     {{ range .Site.Languages }}{{ with index $translations .Lang }}
     <li class="{{ if (eq $.Site.Language .Language) }}active{{ end }}">
-      <a href="{{ if (eq $.Site.Language .Language) }}{{ $currentpage }}{{ else }}{{ .Permalink }}{{ end }}" class="flex align-center">
+      <a href="{{ if (eq $.Site.Language .Language) }}{{ $.Permalink }}{{ else }}{{ .Permalink }}{{ end }}" class="flex align-center">
         <img src="{{ "svg/translate.svg" | relURL }}" class="book-icon" alt="Languages" />
         {{ .Language.LanguageName }}
       </a>
