--- a/layouts/partials/docs/languages.html
+++ b/layouts/partials/docs/languages.html
@@ -1,7 +1,10 @@
 <!-- Merge home and current page translations -->
+{{ $onlyTranslated := default false .Site.Params.OnlyTranslated }}
 {{ $translations := dict }}
-{{ range .Site.Home.AllTranslations }}
-  {{ $translations = merge $translations (dict .Language.Lang .) }}
+{{ if (eq $onlyTranslated false ) }}
+  {{ range .Site.Home.AllTranslations }}
+    {{ $translations = merge $translations (dict .Language.Lang .) }}
+  {{ end }}
 {{ end }}
 {{ range .Translations }}
   {{ $translations = merge $translations (dict .Language.Lang .) }}
