--- a/layouts/partials/docs/languages.html
+++ b/layouts/partials/docs/languages.html
@@ -1,7 +1,7 @@
 <!-- Merge home and current page translations -->
-{{ $onlyTranslated := default false .Site.Params.OnlyTranslated }}
+{{ $bookTranslatedOnly := default false .Site.Params.BookTranslatedOnly }}
 {{ $translations := dict }}
-{{ if (eq $onlyTranslated false ) }}
+{{ if (eq $bookTranslatedOnly false ) }}
   {{ range .Site.Home.AllTranslations }}
     {{ $translations = merge $translations (dict .Language.Lang .) }}
   {{ end }}
