#286, Add ability to set image for posts

--- a/layouts/partials/docs/post-meta.html
+++ b/layouts/partials/docs/post-meta.html
@@ -11,3 +11,13 @@
   </div>
   {{ end }}
 {{ end }}
+
+<p>
+{{ if .Params.image}}
+  {{ with .Resources.GetMatch .Params.image }}
+    <img src={{ .RelPermalink }} />
+  {{ else }}
+    <img src={{ .Params.image | relURL }} />
+  {{ end }}
+{{ end }}
+</p>
