#281, Copy code block content on click

--- a/layouts/partials/docs/footer.html
+++ b/layouts/partials/docs/footer.html
@@ -23,3 +23,8 @@
   </div>
 {{ end }}
 </div>
+
+{{ $script := resources.Get "clipboard.js" | resources.Minify }}
+{{ with $script.Content }}
+  <script>{{ . | safeJS }}</script>
+{{ end }}
