--- a/layouts/partials/docs/brand.html
+++ b/layouts/partials/docs/brand.html
@@ -1,5 +1,14 @@
+{{ $page := slice }}
+{{ if .Site.IsMultiLingual }}
+  {{/* Prefer existing and translated variant of home page */}}
+  {{ range .Site.Home.AllTranslations }}
+    {{ if (and .Content (or (not $page) (eq .Language.Lang $.Language.Lang))) }}
+      {{ $page = . }}
+    {{ end }}
+  {{ end }}
+{{ end }}
 <h2 class="book-brand">
-  <a href="{{ .Site.BaseURL | relLangURL }}">
+  <a href="{{ (default .Site.Home $page).RelPermalink }}">
     {{- with .Site.Params.BookLogo -}}
     <img src="{{ . | relURL }}" alt="Logo" />
     {{- end -}}
