Rewrite prev-next with enw lang. selector

--- a/assets/_main.scss
+++ b/assets/_main.scss
@@ -279,6 +279,22 @@ body[dir="rtl"] .book-menu {
 .book-footer {
   padding-top: $padding-16;
   font-size: $font-size-14;
+
+  a {
+    margin: $padding-8 0;
+  }
+
+  img {
+    height: 1em;
+    width: 1em;
+    
+    &:first-child {
+      margin-inline-end: $padding-8;
+    }
+    &:last-child {
+      margin-inline-start: $padding-8;
+    }
+  }
 }
 
 .book-comments {
