--- a/layouts/_partials/docs/footer.html
+++ b/layouts/_partials/docs/footer.html
@@ -21,6 +21,8 @@
 
 </div>
 
+{{ partial "docs/prev-next" . }}
+
 {{ $script := resources.Get "clipboard.js" | resources.Minify }}
 {{ with $script.Content }}
   <script>{{ . | safeJS }}</script>
