Move title tags to head partial

--- a/layouts/partials/docs/html-head.html
+++ b/layouts/partials/docs/html-head.html
@@ -5,7 +5,7 @@
 
 {{- template "_internal/opengraph.html" . -}}
 
-{{ partial "docs/site-title" . }}
+<title>{{ partial "docs/html-head-title" . }}</title>
 
 {{- $manifest := resources.Get "manifest.json" | resources.ExecuteAsTemplate "manifest.json" . }}
 <link rel="manifest" href="{{ $manifest.RelPermalink }}">
