--- a/layouts/partials/docs/header.html
+++ b/layouts/partials/docs/header.html
@@ -1,4 +1,5 @@
 <div class="flex align-center justify-between">
+  <link rel="stylesheet" href="{{ "fontawesome/css/font-awesome.min.css" | relURL }}">
   <label for="menu-control">
     <img src="{{ "svg/menu.svg" | relURL }}" class="book-icon" alt="Menu" />
   </label>
