--- a/layouts/partials/docs/menu-filetree.html
+++ b/layouts/partials/docs/menu-filetree.html
@@ -10,13 +10,33 @@
 {{ define "book-section-children" }}{{/* (dict "Section" .Section "CurrentPage" .CurrentPage) */}}
   <ul>
     {{ range (where .Section.Pages "Params.bookhidden" "ne" true) }}
-      {{ if .IsSection }}
-        <li {{- if .Params.BookFlatSection }} class="book-section-flat" {{ end -}}>
+      {{ if .Params.bookExternalUrl }}
+        <li
+          {{- if and (not .Page.Params.bookIconImage) (not .Page.Params.bookIconFa) .Params.BookFlatSection }} class="book-section-flat navigation-icon-pad"
+          {{- else if .Params.BookFlatSection }} class="book-section-flat"
+          {{- else }} class="navigation-icon-pad"
+          {{ end -}}
+        >
+          <a href="{{.Params.bookExternalUrl}}" target="_blank">
+            {{ template "book-nav-item-logo-image" (dict "Page" .) }}
+            {{.Title}}
+          </a>
+        </li>
+      {{ else if .IsSection }}
+        <li
+          {{- if and (not .Page.Params.bookIconImage) (not .Page.Params.bookIconFa) .Params.BookFlatSection }} class="book-section-flat navigation-icon-pad"
+          {{- else if .Params.BookFlatSection }} class="book-section-flat"
+          {{- else }} class="navigation-icon-pad"
+          {{ end -}}
+        >
           {{ template "book-page-link" (dict "Page" . "CurrentPage" $.CurrentPage) }}
           {{ template "book-section-children" (dict "Section" . "CurrentPage" $.CurrentPage) }}
         </li>
       {{ else if and .IsPage .Content }}
-        <li>
+        <li
+        {{- if or .Parent.Params.bookIconImage .Parent.Params.bookIconFa }} class="navigation-icon-pad"
+        {{ end -}}
+        >
           {{ template "book-page-link" (dict "Page" . "CurrentPage" $.CurrentPage) }}
         </li>
       {{ end }}
@@ -32,14 +52,37 @@
     <input type="checkbox" id="section-{{ md5 .Page }}" class="toggle" {{ if or $current $ancestor }}checked{{ end }} />
     <label for="section-{{ md5 .Page }}" class="flex justify-between">
       <a {{ if .Page.Content }}href="{{ .Page.Permalink }}"{{ else }}role="button"{{ end }} class="{{ if $current }}active{{ end }}">
+        {{ template "book-nav-item-logo-image" (dict "Page" .Page) }}
         {{- partial "docs/title" .Page -}}
       </a>
     </label>
   {{ else if .Page.Content }}
     <a href="{{ .Page.Permalink }}" class="{{ if $current }} active{{ end }}">
+      {{ template "book-nav-item-logo-image" (dict "Page" .Page) }}
       {{- partial "docs/title" .Page -}}
     </a>
   {{ else }}
-    <span>{{- partial "docs/title" .Page -}}</span>
+    <span>
+      {{ template "book-nav-item-logo-image" (dict "Page" .Page) }}
+      {{- partial "docs/title" .Page -}}
+    </span>
   {{ end }}
 {{ end }}
+
+{{ define "book-nav-item-logo-image" }}{{/* (dict "Page" .Page) */}}
+  {{- if .Page.Params.bookIconImage }}
+    <img src="{{.Page.Params.bookIconImage}}" class="navigation-icon fa-fw"/>
+  {{- else if .Page.Params.bookIconFa }}
+    <i class="fa {{.Page.Params.bookIconFa}} fa-fw"></i>
+  {{ end -}}
+{{ end }}
+
+{{ define "book-li-classes" }} */}}{{/* (dict "Page" .Page) */}}
+  {{ $hasLogo := false }}
+  {{ if and not .Page.Params.bookIconImage not .Page.Params.bookIconFa }}
+    {{ $hasLogo := true }}
+  {{ else }}
+    {{ $hasLogo := false }}
+  {{ end -}}
+  class="{{ if $hasLogo }} navigation-icon-pad {{ end }}{{ if .Params.BookFlatSection }} book-section-flat {{ end }}"
+{{ end -}}
