--- a/layouts/shortcodes/katex.html
+++ b/layouts/shortcodes/katex.html
@@ -1,6 +1,6 @@
 {{- if not (.Page.Scratch.Get "katex") -}}
 <!-- Include katext only first time -->
-<link rel="stylesheet" href="{{ "katex/katex.min.css" | relURL }}" />
+<link rel="stylesheet" href="{{ "katex/katex.css" | relURL }}" />
 <script defer src="{{ "katex/katex.min.js" | relURL }}"></script>
 <script defer src="{{ "katex/auto-render.min.js" | relURL }}" onload="renderMathInElement(document.body);"></script>
 {{- .Page.Scratch.Set "katex" true -}}
