`overflow: auto hidden` in display equations

--- a/static/katex/katex.css
+++ b/static/katex/katex.css
@@ -1051,6 +1051,7 @@
   display: block;
   margin: 1em 0;
   text-align: center;
+  overflow: auto hidden;
 }
 .katex-display > .katex {
   display: block;
